gccida/c1/doloop_modify_runtime
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/doloop_modify_runtime/src/doloop.c:1011:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/doloop_modify_runtime/src/doloop.c:1034:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/doloop_modify_runtime/src/doloop.c:1048:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v41; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/doloop_modify_runtime/src/doloop.c:1049:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v42; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/doloop_modify_runtime/src/doloop.c:1052:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code comparison; // [rsp+14h] [rbp-74h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/doloop_modify_runtime/src/doloop.c:1064:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v10.rtwint = ( __int64)op1->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/doloop_modify_runtime/src/doloop.c:1133:30: error: use of undeclared identifier 'machine_mode'
v35 = expand_simple_binop( ( machine_mode)*( ( unsigned __int8 *)v30 + 2), AND, v17, v34, 0LL, 1, OPTAB_LIB_WIDEN); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/doloop_modify_runtime/src/doloop.c:1142:48: error: use of undeclared identifier 'machine_mode'
emit_cmp_and_jump_insns( v35, v40, v41, 0LL, ( machine_mode)*( ( unsigned __int8 *)v35 + 2), 0, v38); 
                                               ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/doloop_modify_runtime/src/obj/doloop.o] Error 1
